[package]
name = "illya"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[[bin]]
name = "illya"
path = "src/bin/illya.rs"
doc = false

[dependencies]
# parse command-line.
clap = "3.0"
# linux c api for rust.
nix = "0.23"
log = { version = "0.4", features = ["std"] }
# format datetime
chrono = "0.4"
path-filetype = "0.1"
# parse json data
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
wasmtime = "0.34"
wasmtime-wasi = "0.34"